src/de/tuhh/ict/pshdl/model/parser/PSHDLLangParser.java
// Generated from PSHDLLang.g4 by ANTLR 4.0
package de.tuhh.ict.pshdl.model.parser;

import java.util.*;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class PSHDLLangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__46 = 1, T__45 = 2, T__44 = 3, T__43 = 4, T__42 = 5, T__41 = 6, T__40 = 7, T__39 = 8, T__38 = 9, T__37 = 10, T__36 = 11, T__35 = 12, T__34 = 13,
			T__33 = 14, T__32 = 15, T__31 = 16, T__30 = 17, T__29 = 18, T__28 = 19, T__27 = 20, T__26 = 21, T__25 = 22, T__24 = 23, T__23 = 24, T__22 = 25, T__21 = 26, T__20 = 27,
			T__19 = 28, T__18 = 29, T__17 = 30, T__16 = 31, T__15 = 32, T__14 = 33, T__13 = 34, T__12 = 35, T__11 = 36, T__10 = 37, T__9 = 38, T__8 = 39, T__7 = 40, T__6 = 41,
			T__5 = 42, T__4 = 43, T__3 = 44, T__2 = 45, T__1 = 46, T__0 = 47, AND = 48, OR = 49, XOR = 50, LOGI_AND = 51, LOGI_OR = 52, MUL = 53, DIV = 54, PLUS = 55, MOD = 56,
			POW = 57, SLL = 58, SRA = 59, SRL = 60, EQ = 61, NOT_EQ = 62, LESS = 63, LESS_EQ = 64, GREATER = 65, GREATER_EQ = 66, ASSGN = 67, ADD_ASSGN = 68, SUB_ASSGN = 69,
			MUL_ASSGN = 70, DIV_ASSGN = 71, MOD_ASSGN = 72, AND_ASSGN = 73, XOR_ASSGN = 74, OR_ASSGN = 75, SLL_ASSGN = 76, SRL_ASSGN = 77, SRA_ASSGN = 78, ARITH_NEG = 79,
			BIT_NEG = 80, LOGIC_NEG = 81, MODULE = 82, TESTBENCH = 83, RULE_PS_LITERAL_TERMINAL = 84, RULE_ID = 85, RULE_STRING = 86, RULE_ML_COMMENT = 87,
			RULE_GENERATOR_CONTENT = 88, RULE_SL_COMMENT = 89, RULE_WS = 90;
	public static final String[] tokenNames = { "<INVALID>", "'interface'", "'register'", "'['", "'param'", "'substitute'", "'inout'", "'}'", "'case'", "'uint'", "'simulation'",
			"'->'", "')'", "'bool'", "'generate'", "'inline'", "'@'", "'.*'", "'const'", "'enum'", "']'", "'default'", "'in'", "','", "':'", "'('", "'if'", "'$rst'", "'int'",
			"'?'", "'package'", "'{'", "'native'", "'extends'", "'else'", "'import'", "'function'", "'.'", "'for'", "'process'", "'$clk'", "';'", "'include'", "'switch'",
			"'string'", "'#'", "'out'", "'bit'", "'&'", "'|'", "'^'", "'&&'", "'||'", "'*'", "'/'", "'+'", "'%'", "'**'", "'<<'", "'>>'", "'>>>'", "'=='", "'!='", "'<'", "'<='",
			"'>'", "'>='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'<<='", "'>>>='", "'>>='", "'-'", "'~'", "'!'", "'module'", "'testbench'",
			"RULE_PS_LITERAL_TERMINAL", "RULE_ID", "RULE_STRING", "RULE_ML_COMMENT", "RULE_GENERATOR_CONTENT", "RULE_SL_COMMENT", "RULE_WS" };
	public static final int RULE_psModel = 0, RULE_psUnit = 1, RULE_psImports = 2, RULE_psQualifiedNameImport = 3, RULE_psBlock = 4, RULE_psProcess = 5, RULE_psInstantiation = 6,
			RULE_psInterfaceInstantiation = 7, RULE_psDirectGeneration = 8, RULE_psPassedArguments = 9, RULE_psArgument = 10, RULE_psCast = 11, RULE_psExpression = 12,
			RULE_psValue = 13, RULE_psBitAccess = 14, RULE_psAccessRange = 15, RULE_psVariableRef = 16, RULE_psRefPart = 17, RULE_psVariable = 18, RULE_psStatement = 19,
			RULE_psFunctionDeclaration = 20, RULE_psInlineFunction = 21, RULE_psSubstituteFunction = 22, RULE_psFuncParam = 23, RULE_psNativeFunction = 24, RULE_psFunction = 25,
			RULE_psFuncArgs = 26, RULE_psAssignmentOrFunc = 27, RULE_psAssignmentOp = 28, RULE_psCompoundStatement = 29, RULE_psIfStatement = 30, RULE_psSimpleBlock = 31,
			RULE_psForStatement = 32, RULE_psSwitchStatement = 33, RULE_psCaseStatements = 34, RULE_psDeclaration = 35, RULE_psDeclarationType = 36, RULE_psTypeDeclaration = 37,
			RULE_psEnumDeclaration = 38, RULE_psEnum = 39, RULE_psVariableDeclaration = 40, RULE_psDeclAssignment = 41, RULE_psArrayInit = 42, RULE_psArrayInitSub = 43,
			RULE_psArray = 44, RULE_psDirection = 45, RULE_psAnnotation = 46, RULE_psAnnotationType = 47, RULE_psPrimitive = 48, RULE_psPrimitiveType = 49, RULE_psWidth = 50,
			RULE_psInterfaceDeclaration = 51, RULE_psInterface = 52, RULE_psInterfaceExtends = 53, RULE_psInterfaceDecl = 54, RULE_psPortDeclaration = 55,
			RULE_psQualifiedName = 56;
	public static final String[] ruleNames = { "psModel", "psUnit", "psImports", "psQualifiedNameImport", "psBlock", "psProcess", "psInstantiation", "psInterfaceInstantiation",
			"psDirectGeneration", "psPassedArguments", "psArgument", "psCast", "psExpression", "psValue", "psBitAccess", "psAccessRange", "psVariableRef", "psRefPart",
			"psVariable", "psStatement", "psFunctionDeclaration", "psInlineFunction", "psSubstituteFunction", "psFuncParam", "psNativeFunction", "psFunction", "psFuncArgs",
			"psAssignmentOrFunc", "psAssignmentOp", "psCompoundStatement", "psIfStatement", "psSimpleBlock", "psForStatement", "psSwitchStatement", "psCaseStatements",
			"psDeclaration", "psDeclarationType", "psTypeDeclaration", "psEnumDeclaration", "psEnum", "psVariableDeclaration", "psDeclAssignment", "psArrayInit", "psArrayInitSub",
			"psArray", "psDirection", "psAnnotation", "psAnnotationType", "psPrimitive", "psPrimitiveType", "psWidth", "psInterfaceDeclaration", "psInterface",
			"psInterfaceExtends", "psInterfaceDecl", "psPortDeclaration", "psQualifiedName" };

	@Override
	public String getGrammarFileName() {
		return "PSHDLLang.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public PSHDLLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class PsModelContext extends ParserRuleContext {
		public PsDeclarationContext psDeclaration(int i) {
			return getRuleContext(PsDeclarationContext.class, i);
		}

		public List<PsUnitContext> psUnit() {
			return getRuleContexts(PsUnitContext.class);
		}

		public PsUnitContext psUnit(int i) {
			return getRuleContext(PsUnitContext.class, i);
		}

		public PsQualifiedNameContext psQualifiedName() {
			return getRuleContext(PsQualifiedNameContext.class, 0);
		}

		public List<PsDeclarationContext> psDeclaration() {
			return getRuleContexts(PsDeclarationContext.class);
		}

		public PsModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psModel;
		}
	}

	public final PsModelContext psModel() throws RecognitionException {
		PsModelContext _localctx = new PsModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_psModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(118);
				_la = _input.LA(1);
				if (_la == 30) {
					{
						setState(114);
						match(30);
						setState(115);
						psQualifiedName();
						setState(116);
						match(41);
					}
				}

				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 4) | (1L << 5) | (1L << 6) | (1L << 9) | (1L << 10) | (1L << 13) | (1L << 15)
						| (1L << 16) | (1L << 18) | (1L << 19) | (1L << 22) | (1L << 28) | (1L << 32) | (1L << 44) | (1L << 46) | (1L << 47))) != 0))
						|| (_la == MODULE) || (_la == TESTBENCH)) {
					{
						setState(122);
						switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
						case 1: {
							setState(120);
							psUnit();
						}
							break;

						case 2: {
							setState(121);
							psDeclaration();
						}
							break;
						}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsUnitContext extends ParserRuleContext {
		public Token unitType;

		public PsAnnotationContext psAnnotation(int i) {
			return getRuleContext(PsAnnotationContext.class, i);
		}

		public PsImportsContext psImports(int i) {
			return getRuleContext(PsImportsContext.class, i);
		}

		public List<PsBlockContext> psBlock() {
			return getRuleContexts(PsBlockContext.class);
		}

		public PsBlockContext psBlock(int i) {
			return getRuleContext(PsBlockContext.class, i);
		}

		public List<PsImportsContext> psImports() {
			return getRuleContexts(PsImportsContext.class);
		}

		public List<PsAnnotationContext> psAnnotation() {
			return getRuleContexts(PsAnnotationContext.class);
		}

		public PsInterfaceContext psInterface() {
			return getRuleContext(PsInterfaceContext.class, 0);
		}

		public PsUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psUnit;
		}
	}

	public final PsUnitContext psUnit() throws RecognitionException {
		PsUnitContext _localctx = new PsUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_psUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 16) {
					{
						{
							setState(127);
							psAnnotation();
						}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(133);
				((PsUnitContext) _localctx).unitType = _input.LT(1);
				_la = _input.LA(1);
				if (!((_la == MODULE) || (_la == TESTBENCH))) {
					((PsUnitContext) _localctx).unitType = (Token) _errHandler.recoverInline(this);
				}
				consume();
				setState(134);
				psInterface();
				setState(135);
				match(31);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 35) {
					{
						{
							setState(136);
							psImports();
						}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 4) | (1L << 5) | (1L << 6) | (1L << 9) | (1L << 10) | (1L << 13) | (1L << 15)
						| (1L << 16) | (1L << 18) | (1L << 19) | (1L << 22) | (1L << 26) | (1L << 27) | (1L << 28) | (1L << 32) | (1L << 38) | (1L << 39) | (1L << 40) | (1L << 42)
						| (1L << 43) | (1L << 44) | (1L << 46) | (1L << 47))) != 0))
						|| (_la == RULE_ID)) {
					{
						{
							setState(142);
							psBlock();
						}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(148);
				match(7);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsImportsContext extends ParserRuleContext {
		public PsQualifiedNameImportContext psQualifiedNameImport() {
			return getRuleContext(PsQualifiedNameImportContext.class, 0);
		}

		public PsImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psImports;
		}
	}

	public final PsImportsContext psImports() throws RecognitionException {
		PsImportsContext _localctx = new PsImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_psImports);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(150);
				match(35);
				setState(151);
				psQualifiedNameImport();
				setState(152);
				match(41);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsQualifiedNameImportContext extends ParserRuleContext {
		public PsQualifiedNameContext psQualifiedName() {
			return getRuleContext(PsQualifiedNameContext.class, 0);
		}

		public PsQualifiedNameImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psQualifiedNameImport;
		}
	}

	public final PsQualifiedNameImportContext psQualifiedNameImport() throws RecognitionException {
		PsQualifiedNameImportContext _localctx = new PsQualifiedNameImportContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_psQualifiedNameImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(154);
				psQualifiedName();
				setState(156);
				_la = _input.LA(1);
				if (_la == 17) {
					{
						setState(155);
						match(17);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsBlockContext extends ParserRuleContext {
		public PsInstantiationContext psInstantiation() {
			return getRuleContext(PsInstantiationContext.class, 0);
		}

		public PsStatementContext psStatement() {
			return getRuleContext(PsStatementContext.class, 0);
		}

		public PsDeclarationContext psDeclaration() {
			return getRuleContext(PsDeclarationContext.class, 0);
		}

		public PsBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psBlock;
		}
	}

	public final PsBlockContext psBlock() throws RecognitionException {
		PsBlockContext _localctx = new PsBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_psBlock);
		try {
			setState(161);
			switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
					setState(158);
					psDeclaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
					setState(159);
					psStatement();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
					setState(160);
					psInstantiation();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsProcessContext extends ParserRuleContext {
		public Token isProcess;

		public List<PsBlockContext> psBlock() {
			return getRuleContexts(PsBlockContext.class);
		}

		public PsBlockContext psBlock(int i) {
			return getRuleContext(PsBlockContext.class, i);
		}

		public PsProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psProcess;
		}
	}

	public final PsProcessContext psProcess() throws RecognitionException {
		PsProcessContext _localctx = new PsProcessContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_psProcess);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(163);
				((PsProcessContext) _localctx).isProcess = match(39);
				setState(164);
				match(31);
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 4) | (1L << 5) | (1L << 6) | (1L << 9) | (1L << 10) | (1L << 13) | (1L << 15)
						| (1L << 16) | (1L << 18) | (1L << 19) | (1L << 22) | (1L << 26) | (1L << 27) | (1L << 28) | (1L << 32) | (1L << 38) | (1L << 39) | (1L << 40) | (1L << 42)
						| (1L << 43) | (1L << 44) | (1L << 46) | (1L << 47))) != 0))
						|| (_la == RULE_ID)) {
					{
						{
							setState(165);
							psBlock();
						}
					}
					setState(170);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(171);
				match(7);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsInstantiationContext extends ParserRuleContext {
		public PsInterfaceInstantiationContext psInterfaceInstantiation() {
			return getRuleContext(PsInterfaceInstantiationContext.class, 0);
		}

		public PsDirectGenerationContext psDirectGeneration() {
			return getRuleContext(PsDirectGenerationContext.class, 0);
		}

		public PsInstantiationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psInstantiation;
		}
	}

	public final PsInstantiationContext psInstantiation() throws RecognitionException {
		PsInstantiationContext _localctx = new PsInstantiationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_psInstantiation);
		try {
			setState(175);
			switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
					setState(173);
					psInterfaceInstantiation();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
					setState(174);
					psDirectGeneration();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsInterfaceInstantiationContext extends ParserRuleContext {
		public PsVariableContext psVariable() {
			return getRuleContext(PsVariableContext.class, 0);
		}

		public PsPassedArgumentsContext psPassedArguments() {
			return getRuleContext(PsPassedArgumentsContext.class, 0);
		}

		public PsArrayContext psArray() {
			return getRuleContext(PsArrayContext.class, 0);
		}

		public PsQualifiedNameContext psQualifiedName() {
			return getRuleContext(PsQualifiedNameContext.class, 0);
		}

		public PsInterfaceInstantiationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psInterfaceInstantiation;
		}
	}

	public final PsInterfaceInstantiationContext psInterfaceInstantiation() throws RecognitionException {
		PsInterfaceInstantiationContext _localctx = new PsInterfaceInstantiationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_psInterfaceInstantiation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(177);
				psQualifiedName();
				setState(178);
				psVariable();
				setState(180);
				_la = _input.LA(1);
				if (_la == 3) {
					{
						setState(179);
						psArray();
					}
				}

				setState(183);
				_la = _input.LA(1);
				if (_la == 25) {
					{
						setState(182);
						psPassedArguments();
					}
				}

				setState(185);
				match(41);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsDirectGenerationContext extends ParserRuleContext {
		public Token isInclude;

		public TerminalNode RULE_GENERATOR_CONTENT() {
			return getToken(PSHDLLangParser.RULE_GENERATOR_CONTENT, 0);
		}

		public TerminalNode RULE_ID() {
			return getToken(PSHDLLangParser.RULE_ID, 0);
		}

		public PsVariableContext psVariable() {
			return getRuleContext(PsVariableContext.class, 0);
		}

		public PsPassedArgumentsContext psPassedArguments() {
			return getRuleContext(PsPassedArgumentsContext.class, 0);
		}

		public PsInterfaceContext psInterface() {
			return getRuleContext(PsInterfaceContext.class, 0);
		}

		public PsDirectGenerationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psDirectGeneration;
		}
	}

	public final PsDirectGenerationContext psDirectGeneration() throws RecognitionException {
		PsDirectGenerationContext _localctx = new PsDirectGenerationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_psDirectGeneration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(188);
				_la = _input.LA(1);
				if (_la == 42) {
					{
						setState(187);
						((PsDirectGenerationContext) _localctx).isInclude = match(42);
					}
				}

				setState(190);
				psInterface();
				setState(191);
				psVariable();
				setState(192);
				match(ASSGN);
				setState(193);
				match(14);
				setState(194);
				match(RULE_ID);
				setState(196);
				_la = _input.LA(1);
				if (_la == 25) {
					{
						setState(195);
						psPassedArguments();
					}
				}

				setState(199);
				_la = _input.LA(1);
				if (_la == RULE_GENERATOR_CONTENT) {
					{
						setState(198);
						match(RULE_GENERATOR_CONTENT);
					}
				}

				setState(201);
				match(41);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsPassedArgumentsContext extends ParserRuleContext {
		public List<PsArgumentContext> psArgument() {
			return getRuleContexts(PsArgumentContext.class);
		}

		public PsArgumentContext psArgument(int i) {
			return getRuleContext(PsArgumentContext.class, i);
		}

		public PsPassedArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psPassedArguments;
		}
	}
